Import of CAIO/Redis-NaiveBayes-0.0.4 from CPAN.
gitpan-cpan-distribution: Redis-NaiveBayes
gitpan-cpan-version:      0.0.4
gitpan-cpan-path:         CAIO/Redis-NaiveBayes-0.0.4.tar.gz
gitpan-cpan-author:       CAIO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.0.4   2014-02-23
+        - Make build/test work on Windows
+        - Added tool for performance/precision benchmarking under eg/
+
 0.0.3   2013-09-23
         - Big performance improvements by caching the tally per label
         - Drop support for redis-cluster
